fix banner bug with the scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ h2, h5 {
 }
 
 h5 {
-    font-size: 1rem;
+    font-size: 0.8rem;
     padding: 0.75rem 0;
 }
 /* #endregion common */
@@ -68,10 +68,18 @@ main {
     justify-content: flex-end;
 }
 
+.upgrade_banner:hover {
+    width: calc(100% - 236px);
+    right: 1rem;
+}
+
 .upgrade_container {
     padding: 0 1rem;
 }
 
+.upgrade_banner:hover .upgrade_container{
+    padding: 0;
+}
 
 aside, .main_container {
     overflow-y: auto;
@@ -125,7 +133,7 @@ aside {
 }
 
 .main_container .caption > div, .suggestion {
-    font-size: 0.75rem;
+    font-size: 0.65rem;
     font-weight: bold;
 }
 
